--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ protobuf = "^4.21.6,<5.0.0" # chromadb currently fails on 5.0+
 opentelemetry-api = "1.25.0"
 opentelemetry-exporter-otlp-proto-grpc = "1.25.0"
 modal = "^0.64.145"
-fastapi-socketio = "^0.0.10"
+python-socketio = "^5.11.4"
 
 [tool.poetry.group.llama-index.dependencies]
 llama-index = "*"
