--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "apps_to_strip_features_from/cofounder"]
 	path = apps_to_strip_features_from/cofounder
 	url = https://github.com/raidendotai/cofounder/tree/main
+[submodule "apps_to_strip_features_from/ChatDev"]
+	path = apps_to_strip_features_from/ChatDev
+	url = https://github.com/OpenBMB/ChatDev.git
