--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/OpenBMB/ChatDev.git
 [submodule "apps_to_strip_features_from/Eureka"]
 	path = apps_to_strip_features_from/Eureka
-	url = git@github.com:eureka-research/Eureka.git
+	url = https://github.com/eureka-research/Eureka.git
 [submodule "apps_to_strip_features_from/Voyager"]
 	path = apps_to_strip_features_from/Voyager
-	url = git@github.com:MineDojo/Voyager.git
+	url = https://github.com/MineDojo/Voyager.git
